# 389-ds-base

./: .clang-format  .cvsignore  .dockerignore  .gitignore  .packit.yaml  389-doap.rdf  AGENTS.md  EXCEPTION  LICENSE  LICENSE.mit  LICENSE.openssl  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  VERSION.sh  aclocal.m4  autogen.sh  bchecker.ini  build.sh  builddsrpm.sh  buildnum.pl  buildnum.py  buildpaths.mk  component_versions.mk  components.mk  config.h.in  configure  configure.ac  dirsrv.pc.in  dirver.pl  docker.mk  internal_buildpaths.mk  internal_comp_deps.mk  ldapserver.spec  ldapserver.spec.tmpl  modules.awk  modules.sh  (+16 more)
src/: Cargo.toml  Makefile.am  Makefile.in  cache.c  errors.c  file.c  manifest.mn  ntgetpin.c  pin.c  pk11.c  std-systemd.c  std.c  svrcore.h  systemd-ask-pass.c  user.c
src/cockpit/389-console/: .babelrc  .eslintrc.json  .stylelintrc.json  README.md  audit-ci.json  backend.html  banner.html  build.js  buildAndRun.sh  eslint.config.js  index.html  manifest.json  mk_po.sh  monitor.html  node_modules.mk  org.cockpit-project.389-console.metainfo.xml  org.port389.cockpit_console.metainfo.xml  package-lock.json  package.json  packit.yaml  plugins.html  replication.html  rhds-banner.html  schema.html  security.html  servers.html  tsconfig.json  webpack.config.js
src/cockpit/389-console/backup/: ds-bak.js  ds-test.js  ds.css  ds.js  index.html  manifest.json  servers.html  tabbed.js  tabs.css  vert.css  vert2.css
src/cockpit/389-console/css/: ds.css  tabs.css
src/cockpit/389-console/js/: backend.js  ds.js  monitor.js  plugins.js  replication.js  schema.js  security.js  servers.js  tabbed.js
src/cockpit/389-console/po/: ja.po
src/cockpit/389-console/src/: LDAPEditor.jsx  backend.html  backend.js  banner.html  database.jsx  ds.js  ds.jsx  dsBasicComponents.jsx  dsModals.jsx  index.es6  index.html  index.js  manifest.json  monitor.html  monitor.js  monitor.jsx  plugins.html  plugins.jsx  replication.html  replication.js  replication.jsx  schema.html  schema.js  schema.jsx  security.jsx  server.jsx  servers.html  servers.js
src/cockpit/389-console/static/: bootpopup.min.js  jquery-3.3.1.min.js  jquery.dataTables.select.min.js  jquery.dropdown.min.css  jquery.dropdown.min.js  moment.min.js  page.min.css
src/contrib/: README.md
src/contrib/back-ldif/: add.c  back-ldif.h  bind.c  close.c  compare.c  config.c  delete.c  init.c  modify.c  modrdn.c  monitor.c  search.c  start.c  unbind.c
src/lib389/: .coveragerc  .gitignore  MANIFEST.in  Makefile  README  README.md  bug_harness.py  build_hooks.py  dsadmin.pylintrc  lib389.spec  pyproject.toml  python-lib389.spec  requirements.txt  setup.cfg  setup.py  setup.py.in  tox.ini  validate_version.py
src/lib389/cli/: ds-cockpit-setup  dsadm  dsconf  dscontainer  dscreate  dsctl  dsidm  dsrate  openldap_to_ds
src/lib389/clitools/: __init__.py  ds_list_instances.py  ds_monitor_backend.py  ds_monitor_server.py  ds_schema_attributetype_list.py  ds_schema_attributetype_query.py  ds_start.py  ds_stop.py  krb_create_keytab.py  krb_create_principal.py  krb_create_realm.py  krb_destroy_realm.py
src/lib389/doc/: Makefile
src/lib389/doc/source/: accesscontrol.rst  aci.rst  agreement.rst  backend.rst  changelog.rst  conf.py  config.rst  databases.rst  (+26 more)
src/lib389/examples/: ds-setup.inf
src/lib389/lib389/: __init__.py  _constants.py  _controls.py  _entry.py  _ldifconn.py  _mapped_object.py  _mapped_object_lint.py  _replication.py  aci.py  agreement.py  backend.py  brooker.py  cert_manager.py  chaining.py  changelog.py  config.py  conflicts.py  cos.py  dbgen.py  dirsrv_log.py  ds_instance.py  dseldif.py  dseutils.py  dyncerts.py  encrypted_attributes.py  exceptions.py  extended_operations.py  extensibleobject.py  index.py  ldap_objs.py  ldapi.py  ldclt.py  lint.py  mappingTree.py  mit_krb5.py  monitor.py  ns-slapd.valgrind  nss_ssl.py  passwd.py  password_plugins.py  (+21 more)
src/lib389/tests/: aci_parse_test.py  agreement_test.py  backend_test.py  config.py  config_test.py  conftest.py  dereference_test.py  dirsrv_test.py  dsadmin_basic_test.py  dsadmin_create_remove_test.py  dsadmin_test.py  effective_rights_test.py  entry_test.py  krb5_create_test.py  mappingTree_test.py  replica_test.py  schema_test.py  suffix_test.py  test_module_proxy.py  utils_test.py
src/librnsslapd/: Cargo.toml  README.md  build.rs
src/librnsslapd/src/: lib.rs
src/librslapd/: Cargo.toml  README.md  build.rs
src/librslapd/src/: cache.rs  lib.rs
src/libsds/: Cargo.toml  README.md
src/libsds/include/: sds.h
src/libsds/sds/: lib.rs  sds_internal.h  tqueue.rs
src/libsds/test/: benchmark.c  benchmark.h  benchmark_par.c  benchmark_par.h  benchmark_parwrap.c  test_fixtures.c  test_sds.c  test_sds.h  test_sds_bpt.c  test_sds_cow.c  test_sds_csiphash.c  test_sds_ht.c  test_sds_lqueue.c  test_sds_queue.c  test_sds_set.c  test_sds_tqueue.c
src/nunc-stans/: README.md
src/nunc-stans/include/: nunc-stans.h
src/nunc-stans/ns/: ns_event_fw.h  ns_event_fw_event.c  ns_event_fw_tevent.c  ns_private.h  ns_thrpool.c  ns_tls.c  ns_tls.h
src/nunc-stans/test/: test_nuncstans.c  test_nuncstans_stress.c  test_nuncstans_stress.h  test_nuncstans_stress_core.c  test_nuncstans_stress_large.c  test_nuncstans_stress_small.c
src/pkgconfig/: dirsrv.pc.in  libsds.pc.in  nunc-stans.pc.in  svrcore.pc.in
src/plugins/entryuuid/: Cargo.toml
src/plugins/entryuuid_syntax/: Cargo.toml
src/plugins/pwdchan/: Cargo.toml
src/rewriters/: adfilter.c
src/slapd/: Cargo.toml
src/slapd/src/: error.rs  fernet.rs  lib.rs
src/slapi_r_plugin/: Cargo.toml  README.md  build.rs
src/slapi_r_plugin/src/: backend.rs  ber.rs  charray.rs  constants.rs  dn.rs  entry.rs  error.rs  init.c  lib.rs  log.rs  macros.rs  modify.rs  pblock.rs  plugin.rs  search.rs  syntax_plugin.rs  task.rs  value.rs
src/svrcore/: AUTHORS  LICENSE  Makefile.am  NEWS  README  configure.ac  svrcore.spec
src/svrcore/examples/: svrcore_driver.c
src/svrcore/m4/: systemd.m4
src/svrcore/src/: Makefile.am  Makefile.win  alt.c  cache.c  pin.c  std-systemd.c  systemd-ask-pass.c  user.c
(+3959 files in other folders)
